<?xml version="1.0"?>
<package>
  <name>fato_rendering</name>
  <version>0.1.0</version>
  <description>Rendering engine</description>
  <license>BSD</license>
  <url type="website">http://www.robocoffee.org</url>
  <author email="CoffeRobot@users.noreply.github.com">Alessandro Pieropan</author>
  <maintainer email="CoffeRobot@users.noreply.github.com">Alessandro Pieropan</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>utilities</build_depend>
  <build_depend>clustering</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libx11-dev</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>libogre-dev</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>utilities</build_depend>

  <run_depend>utilities</run_depend>
  <run_depend>clustering</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>libx11-dev</run_depend>
  <run_depend>opengl</run_depend>
  <run_depend>libglew-dev</run_depend>
  <run_depend>libogre-dev</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>fato_cuda</run_depend>
  <run_depend>utilities</run_depend>

</package>
