<?xml version="1.0"?>
<package>
  <name>fato_tracker_nodes</name>
  <version>0.0.0</version>
  <description>The fato_tracker package</description>

  <maintainer email="CoffeRobot@users.noreply.github.com">alessandro</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tracker_gpu</build_depend>
  <build_depend>tracker</build_depend>
  <build_depend>utilities</build_depend>
  <build_depend>fato_rendering</build_depend>
  <build_depend>cuda</build_depend>
  <build_depend>tracker_io</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tracker_gpu</run_depend>
  <run_depend>tracker</run_depend>
  <run_depend>utilities</run_depend>
  <run_depend>fato_rendering</run_depend>
  <run_depend>cuda</run_depend>
  <run_depend>tracker_io</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
